Fix Chrome supports query and get rid of sticky footer
Sticky footer causes overflow/scrollbar issues in FF. Since it kinda sucks in general, we'll just eliminate it instead of fixing it. If you wanna stick a credit somewhere else, that's fine, but I'm not worried about it either way.

I borked the Chromium supports query the other day. The new one should do the trick.

--- a/default/darker.css
+++ b/default/darker.css
@@ -640,7 +640,7 @@ html.darker .tv_contents,
 }
 
 .darker .footer {
-    display: block !important;
+    display: none !important;
     font-size: 90%;
     border: 0 !important;
     padding: 0 4px !important;
@@ -875,6 +875,10 @@ html.darker .tv_contents,
         scrollbar-width: auto !important;
     }
 
+    .CodeMirror-scrollbar-filler, .CodeMirror-gutter-filler {
+        background: hsl(0, 0%, 18%)!important;
+    }
+
     .darker .submenu tr.entry:not(.sep),
     .darker .actiontable table > tr,
     .darker .actiontable > tr.clickable,
@@ -935,7 +939,7 @@ html.darker .tv_contents,
     }
 }
 
-@supports(-webkit-min-device-pixel-ratio:0) {
+@supports not (-moz-image-region:inherit) {
     .darker #action {
         box-shadow: inset 0 0 0 1px hsl(0, 0%, 7%), 0 0 0 1px hsl(0, 0%, 7%) !important;
         border: 1px solid hsl(0, 0%, 22%) !important;
